# image_stitching

./: .gitignore  CMakeLists.txt
inc/: Streamer.h  Tailor.h
include/: Image.h  Streamer.h  Tailor.h  desc_base.h  desc_orb.h  kp_base.h  kp_orb.h
src/: Streamer.cpp  Tailor.cpp  main.cpp
src/feature_selector/: config.json  kp_orb.h  orb.h
src/image/: Image.h
src/streamer/: Streamer.cpp  Streamer.h
src/tailor/: Tailor.cpp  Tailor.h
